@@ -389,6 +389,12 @@ ILboolean ilLoadRawL(const void *Lump, ILuint Size);
 ILboolean ilSaveRaw(ILconst_string FileName);
 ILuint    ilSaveRawF(ILHANDLE File);
 ILuint    ilSaveRawL(void *Lump, ILuint Size);
+ILboolean ilLoadRot(ILconst_string FileName);
+ILboolean ilLoadRotF(ILHANDLE File);
+ILboolean ilLoadRotL(const void *Lump, ILuint Size);
+ILboolean ilIsValidRot(ILconst_string FileName);
+ILboolean ilIsValidRotF(ILHANDLE File);
+ILboolean ilIsValidRotL(const void *Lump, ILuint Size);
 ILboolean ilIsValidSgi(ILconst_string FileName);
 ILboolean ilIsValidSgiF(ILHANDLE File);
 ILboolean ilIsValidSgiL(const void *Lump, ILuint Size);
